[package]
name = "dailyco"
version = "0.1.0"
edition = "2021"
categories = ["api-bindings"]
repository = "https://github.com/Gambitosorg/dailyco-rs"
keywords = ["daily", "videochat", "api", "daily.co"]
description = "Rust bindings for Daily REST API (videochat provider)"
authors = ["Matthew Zeitlin <matt@gambitos.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.10", features = ["json", "serde_json"]}
serde = { version = "1.0.137", features = ["derive"]}
serde_with = "1.14.0"
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
