[package]
name = "dailyco"
version = "0.1.0"
edition = "2021"
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/Gambitosorg/dailyco-rs"
keywords = ["daily", "videochat", "api", "dailyco"]
description = "Rust bindings for Daily REST API (videochat provider)"
authors = ["Matthew Zeitlin <matt@gambitos.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1", features = ["derive"]}
thiserror = "1.0.31"
jsonwebtoken = {version = "8", optional = true}

[features]

# Allow self-signing `Daily` meeting tokens.
self-signed-tokens = ["jsonwebtoken"]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
anyhow = "1"
chrono = {version = "0.4.19", default-features = false, features = ["clock"]}
dotenv = "0.15.0"
doc-comment = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"
