[package]
name = "dailyco"
version = "0.6.0"
edition = "2021"
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/rookly-dev/dailyco-rs"
keywords = ["daily", "videochat", "api", "dailyco"]
description = "Rust bindings for Daily REST API (videochat provider)"
authors = ["Matthew Zeitlin <matt@rookly.com>"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = {version = "0.12.5", features = ["json"], default-features = false}
serde = { version = "1", features = ["derive"]}
thiserror = "1.0.31"
jsonwebtoken = {version = "9.3.0", optional = true, default-features = false}
uuid = {version = "1.1", default-features = false, features = ["std", "v4", "serde"]}

[features]
default = ["reqwest/default-tls"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

# Allow self-signing `Daily` meeting tokens.
self-signed-tokens = ["jsonwebtoken"]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
anyhow = "1"
chrono = {version = "0.4.19", default-features = false, features = ["clock"]}
dotenv = "0.15.0"
doc-comment = "0.3"
nanoid = "0.4.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
